Tanaguru-Engine : optimization (powered by sonar)